<resources>
    <string name="app_name">Deepak</string>

    <string name="summary">Innovative Android Developer with 3+ years of experience designing, developing, testing, and maintaining Android applications in the sports entertainment industry. Built core features for app with 50K+ downloads.</string>
    <string name="job_name">Software Developer &amp; Graphic Designer</string>
    <string name="lorem_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</string>
    <string name="name">Deepak Jangir</string>
    <string name="anil">Graphic Design Specialist with 2+ years of experience in the management of the complete design process, from conceptualization to delivery. Skilled with Adobe Creative Suite (Illustrator, Photoshop, InDesign) Microsoft Office and web design applications</string>
    <string name="current_job_post">Current Job Post</string>
    <string name="diploma">Android Certificate</string>
    <string name="education">Education</string>
    <string name="education1">Bachelor of Arts in Computer Science\nRajasthan University </string>
    <string name="myCaption">Android App Development Certificate from MYCAPTAIN \nIIM Bangalore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="professional">Professional Experience</string>
    <string name="portfolio">Portfolio</string>
    <string name="project_name">Project Name</string>
    <string name="our_team">Our Team</string>
    <string name="jhon_doe">Jhon Doe</string>
    <string name="skills">Skills</string>
    <string name="skillsone">Java, Kotlin, Git, Json, Android SDK, XML, SQL\nMobile App Monetization</string>
    <string name="team">Alone we can do so little; together we can do so much.</string>


</resources>
